# ai-pr-review-agent

./: .ai-pr-review.yml  .dockerignore  .gitignore  Dockerfile  README.en.md  README.md  pyproject.toml
.github/workflows/: ai-pr-review.yml
docs/: evaluation-report.md  harness-integration.md  private-deployment.md  verification.md
examples/: risky.diff
examples/evaluation-set/: broad-exception.diff  css-only.diff  docs-only.diff  eval-with-test.diff  js-shell-eval-secret.diff  js-template-sql.diff  json-config.diff  manifest.json  mixed-critical.diff  password-literal.diff  readme-and-code.diff  safe-function-with-test.diff  safe-service-no-test.diff  secret-api-key.diff  secret-with-test.diff  shell-true.diff  shell-with-test.diff  sql-f-string.diff  sql-format-variable.diff  sql-percent-variable.diff  sql-with-test.diff  test-only.diff  toml-config.diff  ts-sql-concat.diff  unsafe-eval.diff  yaml-config.diff
repo-docs/: README.md  change-log.md  glossary.md
repo-docs/modules/: evaluation-memory.md  policy-ci.md  rule-engine.md
repo-docs/references/: commands-and-artifacts.md  rules-and-config.md
repo-docs/walkthroughs/: one-real-run.md
src/ai_pr_review_agent/: __init__.py  agent_harness.py  checks.py  cli.py  context_compressor.py  deepseek_client.py  diff_parser.py  evaluation.py  harness_renderer.py  (+10 more)
tests/: test_advanced_analysis.py  test_agent_harness.py  test_cli.py  test_deepseek_client.py  test_diff_parser.py  test_evaluation.py  test_memory_cli.py  test_renderers.py  test_review_policy.py  test_reviewer.py  test_sarif_renderer.py  test_server.py
