[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-pr-review-agent"
version = "0.1.0"
description = "Local-first AI code review and PR risk analysis agent."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
ai-pr-review = "ai_pr_review_agent.cli:main"
ai-pr-review-web = "ai_pr_review_agent.server:main"
ai-pr-review-memory = "ai_pr_review_agent.memory_cli:main"
ai-pr-review-eval = "ai_pr_review_agent.evaluation:main"

[tool.setuptools.packages.find]
where = ["src"]
